test/functions/bradc/minmaxDefaultArgs1a.good
minmaxDefaultArgs1a.chpl:1: In function 'foo':
minmaxDefaultArgs1a.chpl:2: error: 'min' is used to define itself
minmaxDefaultArgs1a.chpl:3: error: 'max' is used to define itself
